# Sneakydog_CPP_demo

./: .gitignore  CMakeLists.txt  CMakePresets.json
src/: Helloworld.cpp  helloworld.h  main.cpp
